# docs/swagger.json
@@ -4,7 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/carbon/footprint/calculate": {
+        "/api/carbon/footprint/calculate": {
             "post": {
                 "description": "รับค่ากิจกรรมและระยะทาง แล้วคืนค่า Carbon Footprint",
                 "consumes": [
@@ -44,7 +44,7 @@
                 }
             }
         },
-        "/carbon/footprint/calculate/weight": {
+        "/api/carbon/footprint/calculate/weight": {
             "post": {
                 "description": "รับค่ากิจกรรม, ระยะทาง และน้ำหนัก แล้วคืนค่า Carbon Footprint",
                 "consumes": [
